[package]
name = "near-marketplace-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 4.0.0 -> no matching package named `parity-secp256k1` error
# 5.0.0 이후 legacy enable 해야 함 https://github.com/near/near-sdk-rs/blob/e22f74ea9f6a0be8fe030a9225716eab811116ea/CHANGELOG.md#500---2024-02-21
near-sdk = { version = "5.1.0", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
borsh = "0.10.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true